@@ -61,3 +61,6 @@
 
         1.2.0 release
 
+2012-07-05 José Roberto de Souza
+
+        * Use idler instead of idle_enterer for processing messages
